# findcokezero

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.sh
app1_findcokezero/: admin.py  apps.py  models.py  serializers.py  tests.py  tests_retailers.py  tests_retailers_web.py  tests_sodas.py  tests_sodas_db.py  urls.py  views.py
app1_findcokezero/fixtures/: initdata.json
app1_findcokezero/migrations/: 0001_initial.py  0002_auto_20171002_0122.py  0003_auto_20171002_0123.py  0004_auto_20171002_0158.py  0005_soda.py  0006_auto_20171106_0435.py  0007_auto_20171106_0625.py  0008_auto_20171106_0649.py  0009_auto_20171106_0657.py  0010_retailer_sodas.py  0011_auto_20171106_0759.py  0012_auto_20180105_0324.py
app1_findcokezero/templates/: index.html
app1_findcokezero/tests/: tests_retailers_db.py  tests_retailers_web.py  tests_sodas_db.py  tests_sodas_web.py
config/: settings.py  urls.py  views.py
config/static/: empty.txt
config/static/css/: main.css
config/templates/: index.html
docs/: api_endpoints.md
docs/wireframes/: findcokezero.bmpr
findcoke1/: manage.py  secrets.template  settings.py  test.sh  urls.py  views.py  wsgi.py
findcoke1/app1_findcokezero/: admin.py  models.py  serializers.py  tests.py  urls.py
findcoke1/app1_findcokezero/migrations/: 0002_auto_20171002_0122.py  0003_auto_20171002_0123.py
findcoke1/findcoke1/: settings.py  urls.py  wsgi.py
findcoke1/static/css/: main.css
inventory/: __init__.py  admin.py  apps.py  exceptions.py  models.py  serializers.py  types.py  urls.py  views.py
inventory/fixtures/: initdata.json
inventory/migrations/: 0001_initial.py  0002_alter_retailer_latitude_alter_retailer_longitude.py  0002_update_coordinate_precision.py
inventory/services/: __init__.py  exceptions.py  geocoding.py
inventory/tests/: fixtures.py  manual_test.sh  test_geocoding.py  test_google_maps_integration.py  test_integration.py  test_retailers_db.py  test_retailers_web.py  test_services.py  test_sodas_web.py  tests_retailers_db.py  tests_retailers_web.py  tests_sodas_db.py  tests_sodas_web.py  types.py
inventory/tests/test_services/: test_geocoding.py
scripts/: update_database_coordinates.py  update_retailer_coordinates.py
