[project]
name = "findcokezero"
version = "0.1.0"
description = "Django REST Framework API that maps convenience stores and filters by flavors of CokeZero"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.2",
    "certifi==2023.11.17",
    "chardet==5.2.0",
    "dj-database-url==2.1.0",
    "django==4.2.8",
    "django-filter==23.5",
    "django-webtest==1.9.11",
    "djangorestframework==3.14.0",
    "gunicorn==21.2.0",
    "idna==3.6",
    "markdown==3.5.1",
    "psycopg2-binary==2.9.9",
    "pygments==2.17.2",
    "python-dotenv==1.0.0",
    "pytz==2023.3.post1",
    "requests==2.31.0",
    "six==1.16.0",
    "urllib3==2.1.0",
    "waitress==2.1.2",
    "webob==1.8.7",
    "webtest==3.0.0",
    "whitenoise==6.6.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4==4.12.2",
    "django-webtest==1.9.11",
    "six==1.16.0",
    "waitress==2.1.2",
    "webob==1.8.7",
    "webtest==3.0.0",
]
