[project]
name = "findcokezero"
version = "0.1.0"
description = "Django REST Framework API that maps convenience stores and filters by flavors of CokeZero"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url==2.1.0",
    "django==4.2.18",
    "django-webtest==1.9.11",
    "djangorestframework==3.15.2",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.9",
    "pygments==2.17.2",
    "python-dotenv==1.0.0",
    "requests==2.32.3",
    "waitress==2.1.2",
    "whitenoise==6.8.2",
]
