[project]
name = "findcokezero"
version = "0.1.0"
description = "Django REST Framework API that maps convenience stores and filters by flavors of CokeZero"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url==2.1.0",
    "django==4.2.18",
    "django-webtest==1.9.11",
    "djangorestframework==3.15.2",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.9",
    "pygments==2.17.2",
    "python-dotenv==1.0.0",
    "requests==2.32.3",
    "waitress==2.1.2",
    "whitenoise==6.8.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "django-stubs[compatible-mypy]>=5.1.0",
    "djangorestframework-stubs[compatible-mypy]>=3.15.0",
]

[tool.mypy]
python_version = "3.12"
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

# Gradual adoption - start permissive
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
implicit_optional = true

# Helpful warnings
warn_unused_ignores = true
show_error_codes = true

# Import handling
ignore_missing_imports = true

# Paths
files = ["inventory", "config", "manage.py"]
exclude = ["migrations", ".venv", "__pycache__"]

[tool.django-stubs]
django_settings_module = "config.settings"
